--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -19,6 +19,10 @@
   padding: 25px;
   position: relative;
   margin: 50px;
+
+  -moz-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 .about__tail {
   position: absolute;
@@ -71,7 +75,9 @@
 .highlight {
   color: rgba(0, 212, 255, 1);
   font-weight: 800;
+  display: inline;
 }
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
