--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,5 @@
+.header__navItem-text {
+}
 .header__navItem {
   text-decoration: none;
   color: white;
@@ -6,19 +8,38 @@
   min-width: 75px;
   opacity: 1;
   padding: 10px;
-  border-radius: 10px;
-  background-color: rgba(156, 130, 189, 0.2);
   text-align: center;
-  transition: background-color 0.5s ease;
+  transition: transform 250ms ease-in;
   z-index: 1;
   margin: 10px;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.header__navItem::after {
+  content: "";
+  position: absolute;
+  height: calc(100% + 10px);
+  left: -10px;
+  top: -5px;
+  width: calc(100% + 20px);
+  background: rgb(55, 212, 87);
+  border-radius: 0;
+  z-index: -1;
+  transform: scaleX(0.001);
+  transform-origin: left;
+  transition: transform 250ms ease-in;
+  text-decoration: none;
 }
 .header__navItem:hover {
-  background-color: rgb(0, 0, 139, 0.3);
-  color: white;
   text-decoration: none;
-  font-weight: 800;
+  color: white;
 }
+
+.header__navItem-text:hover .header__navItem::after {
+  transform: scaleX(1);
+}
+
 .header {
   height: 10vh;
   width: 100%;
@@ -41,10 +62,9 @@
   overflow: hidden;
 }
 .header__title {
-  font-family: "Orelega One", cursive;
   font-size: 45px;
   color: white;
-  text-shadow: 2px 2px rgb(136, 46, 250);
+  text-shadow: 2px 2px rgb(136, 46, 250, 0.5);
   z-index: 5;
   font-weight: 500;
   animation: fadeIn 1s ease-in;
@@ -58,7 +78,7 @@
     opacity: 1;
   }
 }
-*/ .header__menuList {
+.header__menuList {
   display: flex;
   flex-direction: row;
   width: 100%;
