--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -1,7 +1,65 @@
 .press {
   width: 100%;
+  padding: 24px;
+  background-color: grey;
+  margin: 100px auto 0 auto;
+}
+.press__content {
+  width: 800px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  padding: 24px;
+  margin: 0 auto;
+  height: 200px;
+  color: white;
+  text-align: center;
+  font-size: 18px;
+}
+.press__image {
+  width: 200px;
+  height: 200px;
+  background-image: url("../../images/AdorbsFinnegan.jpeg");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-radius: 25px 0 0 25px;
+}
+.press__info {
+  width: 50%;
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  line-height: 24px;
+  border-radius: 0 25px 25px 0;
+  border: none;
+  z-index: 1;
+}
+.press__link {
+  color: black;
+  font-weight: 800;
+  text-decoration: none;
+  position: relative;
+  z-index: 1;
+  transition: color 250ms ease-in;
+}
+.press__link::after {
+  content: "";
+  position: absolute;
+  height: calc(100% + 10px);
+  left: -10px;
+  top: -5px;
+  width: calc(100% + 20px);
+  background: orange;
+  border-radius: 0;
+  z-index: -1;
+  transform: scaleX(0.05);
+  transform-origin: left;
+  transition: transform 250ms ease-in;
+}
+.press__info:hover .press__link::after {
+  transform: scaleX(1);
+}
+.press__link:hover {
+  color: white;
+  text-decoration: none;
 }
