--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header__navItem-text {
+  text-decoration: none;
 }
 .header__navItem {
   text-decoration: none;
@@ -7,7 +8,7 @@
   font-size: 14px;
   min-width: 75px;
   opacity: 1;
-  padding: 10px;
+  padding: 15px;
   text-align: center;
   transition: transform 250ms ease-in;
   z-index: 1;
@@ -15,6 +16,10 @@
   position: relative;
   overflow: hidden;
   z-index: 1;
+}
+.header__navItem-active {
+  border-bottom: 2px solid white;
+  color: white;
 }
 .header__navItem::after {
   content: "";
@@ -60,6 +65,9 @@
   align-items: center;
   justify-content: space-evenly;
   overflow: hidden;
+  position: fixed;
+  left: 0;
+  z-index: 5;
 }
 .header__title {
   font-size: 45px;
