--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -1,8 +1,17 @@
 .press {
   width: 100%;
-  padding: 24px;
+  padding: 275px;
   background-color: grey;
   margin: 100px auto 0 auto;
+}
+.press__heading {
+  width: 80%;
+  margin: 0 auto;
+  font-size: 36px;
+  color: rgba(0, 212, 255, 1);
+  font-weight: 800;
+  text-align: center;
+  padding-top: 20px;
 }
 .press__content {
   width: 800px;
@@ -15,16 +24,19 @@
   font-size: 18px;
 }
 .press__image {
-  width: 200px;
+  width: 300px;
   height: 200px;
   background-image: url("../../images/AdorbsFinnegan.jpeg");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 25px 0 0 25px;
+  background-color: white;
 }
 .press__info {
-  width: 50%;
+  width: 500px;
+  height: 200px;
+  margin: auto;
   padding: 25px;
   background-color: white;
   color: black;
