--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -1,17 +1,51 @@
 .book {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   margin: 20px 0;
+  min-width: 350px;
 }
 .book__image {
   max-height: 150px;
   max-width: 150px;
-  margin-right: 20px;
-  border-radius: 10px;
+  margin-right: 0px;
+  border-radius: 10px 0 0 10px;
 }
 .book__info {
-  text-align: left;
+  color: black;
+  text-align: center;
+  height: 100%;
+  background-color: white;
+  border-radius: 0 10px 10px 0;
+  padding: 0;
+  min-width: 250px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+}
+
+.book__title {
+  margin: 0;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0;
+}
+
+.book__subtitle {
+  font-weight: 800;
+  color: black;
+  font-size: 18px;
+  padding: 5px;
+  padding-bottom: 0;
+}
+
+.book__contrib {
+  max-width: 75%;
+  font-size: 12px;
+  line-height: 18px;
+  padding: 5px;
+  margin: 0 auto;
 }
 
 .book__buyItem {
@@ -19,47 +53,23 @@
   color: rgb(136, 46, 250);
   font-weight: 800;
   font-size: 14px;
-  min-width: 75px;
+  width: 100%;
   opacity: 1;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 0;
   background-color: rgba(0, 0, 139, 0.2);
   text-align: center;
   transition: background-color 0.5s ease;
   z-index: 1;
-  margin-top: 40px;
+  margin: 0;
+  margin-top: 10px;
   box-shadow: rgb(136, 46, 250);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 0 0 10px 0;
 }
 .book__buyItem:hover {
   background-color: rgb(136, 46, 250, 0.7);
   color: white;
   text-decoration: none;
-}
-.book__info {
-  color: black;
-  text-align: center;
-  height: 150px;
-}
-.book__title {
-  position: relative;
-  margin: 0;
-  font-size: 14px;
-  font-weight: 400;
-  padding: 5px;
-}
-
-.book__subtitle {
-  margin: 0 8px;
-  font-weight: 800;
-  color: rgb(136, 46, 250);
-  font-size: 14px;
-  background-color: white;
-  padding: 5px;
-  border-radius: 10px;
-}
-.book__contrib {
-  margin-top: 5px;
-  font-size: 12px;
-  line-height: 18px;
-  padding: 5px;
 }
