--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,17 +5,18 @@
   text-decoration: none;
   color: white;
   font-weight: 800;
-  font-size: 14px;
+  font-size: 18px;
   min-width: 75px;
   opacity: 1;
   padding: 15px;
   text-align: center;
   transition: transform 250ms ease-in;
   z-index: 1;
-  margin: 10px;
+  margin: 5px;
   position: relative;
   overflow: hidden;
   z-index: 1;
+  cursor: pointer;
 }
 .header__navItem-active {
   border-bottom: 2px solid white;
@@ -24,7 +25,7 @@
 .header__navItem::after {
   content: "";
   position: absolute;
-  height: calc(100% + 10px);
+  height: calc(100% + 3px);
   left: -10px;
   top: -5px;
   width: calc(100% + 20px);
@@ -69,6 +70,9 @@
   left: 0;
   z-index: 5;
 }
+.header__mobile {
+  display: none;
+}
 .header__title {
   font-size: 45px;
   color: white;
@@ -96,4 +100,49 @@
 }
 .header__listItem {
   margin: 10px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .header__title {
+    font-size: 36px;
+    font-weight: 800;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .header {
+    height: 10vh;
+    left: 0;
+    top: 0;
+  }
+  .header__title {
+    font-size: 24px;
+    font-weight: 800;
+  }
+  .header__navItem {
+    font-size: 14px;
+    padding: 0;
+    margin: 2px;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .header__title {
+    font-size: 18px;
+    font-weight: 400;
+    text-align: center;
+
+    text-shadow: none;
+  }
+
+  .header__menuList {
+    display: none;
+  }
+  .header__mobile {
+    background-image: url("../../images/hamburger.svg");
+    width: 24px;
+    height: 24px;
+    background-position: center;
+    background-size: contain;
+    display: flex;
+    margin: auto;
+  }
 }
