--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -1,8 +1,8 @@
 .press {
   width: 100%;
-  padding: 275px;
+  padding: 50px;
   background-color: grey;
-  margin: 100px auto 0 auto;
+  margin: 50px auto 50px auto;
 }
 .press__heading {
   width: 80%;
@@ -11,7 +11,7 @@
   color: rgba(0, 212, 255, 1);
   font-weight: 800;
   text-align: center;
-  padding-top: 20px;
+  padding: 20px 0;
 }
 .press__content {
   width: 800px;
