--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: center;
   margin: 20px 0;
-  min-width: 350px;
+  max-width: 850px;
 }
 .book__image {
   max-height: 150px;
@@ -14,11 +14,11 @@
 .book__info {
   color: black;
   text-align: center;
-  height: 100%;
+
   background-color: white;
   border-radius: 0 10px 10px 0;
   padding: 0;
-  min-width: 250px;
+  max-width: 250px;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -72,4 +72,75 @@
   background-color: rgb(136, 46, 250, 0.7);
   color: white;
   text-decoration: none;
+}
+@media only screen and (max-width: 1150px) {
+  .book__title {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .book__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .book__contrib {
+    font-size: 12px;
+    line-height: 16px;
+  }
+}
+@media only screen and (max-width: 1080px) {
+  .book__title {
+    font-size: 14px;
+    line-height: 16px;
+  }
+
+  .book__subtitle {
+    font-size: 16px;
+    line-height: 18px;
+  }
+
+  .book__contrib {
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .book__info {
+    min-width: 125px;
+  }
+  .book__title {
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .book__subtitle {
+    font-size: 18px;
+    line-height: 20px;
+  }
+
+  .book__contrib {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .book__subtitle {
+    margin: 0 auto 5px auto;
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .book__contrib {
+    font-size: 10px;
+  }
+  .book__buyItem {
+    font-weight: 400;
+    font-size: 12px;
+  }
+}
+
+@media only screen and (max-width: 490px) {
+  .book__title {
+    display: none;
+  }
 }
