--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -4,7 +4,7 @@
 }
 
 .books__cont {
-  width: 80%;
+  max-width: 80%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(2, minmax(200px, 1fr));
@@ -40,4 +40,48 @@
   text-align: center;
 
   padding-top: 5px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .books__heading {
+    font-size: 32px;
+    padding-top: 10px;
+  }
+  .books__subheading {
+    margin: 0 auto 15px auto;
+    font-size: 20px;
+  }
+  .books__cont {
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-gap: 10px;
+    padding: 40px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .books__heading {
+    font-size: 24px;
+
+    padding-top: 10px;
+  }
+  .books__subheading {
+    margin: 0 auto 15px auto;
+    font-size: 14px;
+  }
+  .books__cont {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 650) {
+  .books__heading {
+    font-size: 18px;
+    font-weight: 400;
+    padding-top: 10px;
+  }
+  .books__subheading {
+    margin: 0 auto 15px auto;
+    font-size: 12px;
+  }
 }
