--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin: 20px 0;
+  margin: 10px 0;
   max-width: 850px;
 }
 .book__image {
@@ -104,6 +104,9 @@
     font-size: 10px;
     line-height: 12px;
   }
+  .book {
+    margin: 5px 0;
+  }
 }
 @media only screen and (max-width: 900px) {
   .book__info {
@@ -137,10 +140,16 @@
     font-weight: 400;
     font-size: 12px;
   }
+  .book {
+    margin: 15px 0;
+  }
 }
 
 @media only screen and (max-width: 490px) {
   .book__title {
     display: none;
+  }
+  .book {
+    margin: 10px 0;
   }
 }
