--- a/src/components/Fun/Fun.css
+++ b/src/components/Fun/Fun.css
@@ -25,12 +25,12 @@
   padding-top: 5px;
 }
 .fun__container {
-  width: 800px;
+  max-width: 800px;
   margin: 0 auto;
   display: flex;
   font-size: 24px;
   color: rgba(0, 0, 0, 0.5);
-  flex-direction: column;
+  flex-flow: column wrap;
   justify-content: space-between;
   position: relative;
   padding: 50px 0;
@@ -47,7 +47,7 @@
 }
 .fun__download {
   display: grid;
-  width: 600px;
+  max-width: 600px;
   grid-template-columns: repeat(3, minmax(200px, 2fr));
   grid-gap: 10px;
   margin: 0 auto;
@@ -56,8 +56,8 @@
   width: 50%;
 }
 .fun__item {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
   border-radius: 0 10px 0 10px;
   overflow: hidden;
   position: relative;
@@ -129,4 +129,37 @@
   padding: 10px;
   color: white;
   font-weight: 800;
+}
+
+@media only screen and (max-width: 1200px) {
+  .fun__heading {
+    font-size: 24px;
+  }
+  .fun__subheading {
+    margin: 0 auto 25px auto;
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .fun__heading {
+    font-size: 20px;
+  }
+  .fun__subheading {
+    margin: 0 auto 25px auto;
+    font-size: 16px;
+  }
+  .fun__download {
+    grid-template-columns: repeat(2, minmax(200px, 2fr));
+    grid-gap: 5px;
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 650px) {
+  .fun__heading {
+    font-size: 18px;
+  }
+  .fun__subheading {
+    margin: 0 auto 18px auto;
+    font-size: 12px;
+  }
 }
