--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -35,9 +35,9 @@
 }
 .press__info {
   width: 500px;
-  height: 200px;
+  min-height: 200px;
   margin: auto;
-  padding: 25px;
+  padding: 15px;
   background-color: white;
   color: black;
   font-size: 16px;
@@ -82,24 +82,35 @@
 }
 @media only screen and (max-width: 658px) {
   .press__content {
-    width: 500px;
+    flex-direction: column;
+    height: 100%;
+  }
+  .press__image {
+    width: 450px;
+    border-radius: 25px 25px 0 0;
+    margin: auto;
   }
   .press__info {
     width: 450px;
     line-height: 22px;
     padding: 15px;
+    border-radius: 0 0 25px 25px;
+    margin: auto;
   }
 }
 @media only screen and (max-width: 575px) {
   .press__content {
-    width: 300px;
+    width: 350px;
+    margin: 0 auto;
   }
+  .press__image {
+    width: 350px;
+  }
+
   .press__info {
-    width: 450px;
+    width: 350px;
     line-height: 20px;
     font-size: 16px;
-  }
-  .press__info-text {
-    display: none;
+    border-radius: 0 0 25px 25px;
   }
 }
