--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,6 @@
 @import url("./components/Books/Books.css");
 @import url("./components/Book/Book.css");
 @import url("./components/Match/Match.css");
+@import url("./components/Popup/Popup.css");
+@import url("./components/Navigation/Navigation.css");
+@import url("./components/MobileNavigation/MobileNavigation.css");
