--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,8 @@
 .about {
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  padding: 24px;
   background-image: url("../../images/FinneganCoverImage.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,7 +17,7 @@
   border-radius: 85px;
   padding: 25px;
   position: relative;
-  margin: 75px;
+  margin: 50px;
   -moz-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
@@ -60,6 +58,7 @@
   max-width: 25%;
   background-color: white;
   z-index: 3;
+  margin-left: 10px;
 }
 .about__fox-image:hover {
   animation-name: spin;
@@ -90,6 +89,16 @@
     font-size: 18px;
     line-height: 22px;
   }
+  .about__content {
+    border-radius: 35px;
+    margin: 25px;
+  }
+  .about__tail {
+    left: -20px;
+    bottom: 60px;
+    border-right: 45px solid white;
+    border-bottom: 25px solid transparent;
+  }
 }
 @media only screen and (max-width: 900px) {
   .about__p {
@@ -98,12 +107,7 @@
   }
   .about__content {
     margin: 25px;
-  }
-  .about__tail {
-    left: -20px;
-    bottom: 60px;
-    border-right: 45px solid white;
-    border-bottom: 25px solid transparent;
+    border-radius: 10px;
   }
 }
 @media only screen and (max-width: 650px) {
