--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,11 +4,10 @@
     "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1440px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%vw;
+  width: 100%;
   overflow: hidden;
 }
 .page__content {
