--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,10 @@
 .footer {
-  width: 100%;
+  width: 100vw;
   font-weight: 800;
   text-align: center;
   margin: 0 auto;
   padding: 24px;
+  overflow: hidden;
 }
 @media only screen and (max-width: 900px) {
   .footer {
