--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,7 +48,7 @@
 
 .header {
   height: 10vh;
-  width: 100%;
+  width: 100vw;
   top: 0;
   left: 0;
   background: rgb(55, 212, 87);
@@ -62,9 +62,8 @@
   font-weight: 300;
   display: flex;
   flex-direction: row;
-  padding: 10px;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   overflow: hidden;
   position: fixed;
   left: 0;
@@ -105,6 +104,7 @@
   padding: 0px;
   margin: 0px;
   list-style: none;
+  justify-content: center;
 }
 .header__listItem {
   margin: 10px;
