--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -1,8 +1,10 @@
 .press {
-  width: 100%;
   padding: 50px;
   background-color: grey;
-  margin: 50px auto 50px auto;
+  margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .press__heading {
   width: 80%;
@@ -17,15 +19,15 @@
   width: 800px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   margin: 0 auto;
-  height: 200px;
+
   color: white;
   text-align: center;
   font-size: 18px;
 }
 .press__image {
-  width: 300px;
-  height: 200px;
+  width: 250px;
   background-image: url("../../images/AdorbsFinnegan.jpeg");
   background-position: center;
   background-size: contain;
@@ -35,8 +37,7 @@
 }
 .press__info {
   width: 500px;
-  min-height: 200px;
-  margin: auto;
+  margin: auto 0;
   padding: 15px;
   background-color: white;
   color: black;
@@ -76,19 +77,29 @@
   text-decoration: none;
 }
 @media only screen and (max-width: 900px) {
+  .press {
+    padding: 20px;
+  }
   .press__content {
     width: 600px;
   }
+  .press__info {
+    height: 200px;
+    font-size: 12px;
+  }
 }
 @media only screen and (max-width: 658px) {
+  .press {
+  }
   .press__content {
     flex-direction: column;
     height: 100%;
+    align-items: center;
   }
   .press__image {
     width: 450px;
+    height: 450px;
     border-radius: 25px 25px 0 0;
-    margin: auto;
   }
   .press__info {
     width: 450px;
@@ -102,15 +113,18 @@
   .press__content {
     width: 350px;
     margin: 0 auto;
+    padding: 0;
   }
   .press__image {
     width: 350px;
+    height: 350px;
+    padding: 0;
+    margin: auto;
   }
-
   .press__info {
     width: 350px;
     line-height: 20px;
     font-size: 16px;
-    border-radius: 0 0 25px 25px;
+    padding: 0;
   }
 }
