--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,5 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 100%;
+  width: 80%;
+  overflow: hidden;
+  margin: 0 auto;
+  background-color: white;
 }
