--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,8 +9,6 @@
   color: black;
   min-height: 300px;
   position: relative;
-
-  height: 90vh;
 }
 .about__content {
   width: 75%;
@@ -120,5 +118,16 @@
     bottom: 40px;
     border-right: 25px solid white;
     border-bottom: 15px solid transparent;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .about {
+    height: 70vh;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .about {
+    height: 90vh;
   }
 }
