--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -15,13 +15,15 @@
   z-index: 1;
   background-color: white;
   border-radius: 85px;
-  padding: 25px;
+  padding: 3em;
   position: relative;
   margin: 50px;
+
   -moz-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
+
 .about__tail {
   position: absolute;
   left: -35px;
@@ -36,9 +38,10 @@
 
 .about__p {
   max-width: 800px;
-  text-align: center;
+  text-align: left;
   font-size: 24px;
-  line-height: 36px;
+  line-height: 1.125em;
+
   font-weight: 400;
   z-index: 2;
   overflow: hidden;
