--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -27,7 +27,7 @@
   font-size: 36px;
   color: rgba(0, 212, 255, 1);
   font-weight: 800;
-  text-align: center;
+  text-align: left;
   padding-top: 20px;
   margin-top: 100px;
 }
@@ -37,7 +37,7 @@
   font-size: 24px;
   color: rgba(0, 0, 0, 0.5);
   font-weight: 400;
-  text-align: center;
+  text-align: left;
 
   padding-top: 5px;
 }
@@ -52,9 +52,9 @@
     font-size: 20px;
   }
   .books__cont {
-    grid-template-columns: repeat(2, minmax(150px, 1fr));
-    grid-gap: 10px;
-    padding: 40px;
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
   }
 }
 @media only screen and (max-width: 900px) {
@@ -66,11 +66,6 @@
   .books__subheading {
     margin: 0 auto 15px auto;
     font-size: 14px;
-  }
-  .books__cont {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
   }
 }
 
