--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100vw;
   font-weight: 800;
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
   padding: 24px;
   overflow: hidden;
