--- a/src/components/Fun/Fun.css
+++ b/src/components/Fun/Fun.css
@@ -10,7 +10,7 @@
   font-size: 36px;
   color: rgba(0, 212, 255, 1);
   font-weight: 800;
-  text-align: center;
+  text-align: left;
   padding-top: 20px;
 }
 .fun__subheading {
@@ -19,7 +19,7 @@
   font-size: 24px;
   color: rgba(0, 0, 0, 0.5);
   font-weight: 400;
-  text-align: center;
+  text-align: left;
 
   padding-top: 5px;
 }
@@ -79,7 +79,7 @@
   height: 75px;
   margin: auto;
   z-index: 3;
-  text-align: center;
+  text-align: left;
   -webkit-transition: ease-out 0.3s;
   -moz-transition: ease-out 0.3s;
   transition: ease-out 0.3s;
@@ -97,7 +97,7 @@
   width: 100%;
   height: 75px;
   background-color: rgba(0, 212, 255, 1);
-  text-align: center;
+  text-align: left;
   position: absolute;
   bottom: -100px;
   left: 0px;
