--- a/src/components/Match/Match.css
+++ b/src/components/Match/Match.css
@@ -10,7 +10,7 @@
   border-radius: 15px;
   padding: 0;
   margin: 0;
-  text-align: center;
+  text-align: left;
   background-image: url("../../images/cardBack.png");
   overflow: hidden;
 }
@@ -86,7 +86,7 @@
   border-radius: 15px;
   padding: 0;
   margin: 0;
-  text-align: center;
+  text-align: left;
   background-image: url("../../images/cardBack.png");
   overflow: hidden;
 }
@@ -116,7 +116,7 @@
   background-color: rgb(136, 46, 250);
   margin: auto;
   padding: 8px;
-  text-align: center;
+  text-align: left;
   font-size: 22px;
   font-weight: bold;
   margin: auto;
@@ -144,7 +144,7 @@
   padding: 10px;
   border-radius: 10px;
   background-color: white;
-  text-align: center;
+  text-align: left;
   transition: background-color 0.5s ease;
   z-index: 1;
   margin: 10px;
@@ -164,7 +164,7 @@
   background-color: gainsboro;
   margin: auto;
   padding: 25px;
-  text-align: center;
+  text-align: left;
   font-size: 22px;
   font-weight: bold;
   margin: 50px auto;
