--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   top: 0;
   left: 0;
-  text-align: center;
+  text-align: left;
   position: fixed;
   display: flex;
   justify-content: center;
