--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -12,18 +12,16 @@
   font-size: 36px;
   color: rgba(0, 212, 255, 1);
   font-weight: 800;
-  text-align: center;
+  text-align: left;
   padding: 20px 0;
 }
 .press__content {
-  max-width: 90%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin: 0 auto;
 
+  margin: 0 auto;
   color: white;
-  text-align: center;
+  text-align: left;
   font-size: 18px;
 }
 .press__image {
@@ -34,6 +32,7 @@
   background-repeat: no-repeat;
   border-radius: 25px 0 0 25px;
   background-color: white;
+  padding: 0;
 }
 .press__info {
   width: 500px;
@@ -54,12 +53,13 @@
   position: relative;
   z-index: 1;
   transition: color 250ms ease-in;
+  padding-left: 0.5em;
 }
 .press__link::after {
   content: "";
   position: absolute;
   height: calc(100% + 10px);
-  left: -10px;
+  left: 0px;
   top: -5px;
   width: calc(100% + 20px);
   background: orange;
