--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -123,13 +123,16 @@
     border-bottom: 15px solid transparent;
   }
 }
-@media only screen and (min-width: 900px) {
+@media only screen and (max-width: 900px) {
+  .about__content {
+    padding: 1em;
+  }
   .about {
     height: 70vh;
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (max-width: 1200px) {
   .about {
     height: 90vh;
   }
