--- a/src/components/Fun/Fun.css
+++ b/src/components/Fun/Fun.css
@@ -24,8 +24,8 @@
   padding-top: 5px;
 }
 .fun__container {
-  max-width: 800px;
-  margin: 0 auto;
+  width: 110%;
+  margin: 0;
   display: flex;
   font-size: 24px;
   color: rgba(0, 0, 0, 0.5);
@@ -38,11 +38,11 @@
   transform: rotate(3deg);
   z-index: -1;
   position: absolute;
-  left: -550px;
+  left: -50px;
   top: 0;
   background-color: rgb(55, 212, 87);
   height: 100%;
-  width: 1800px;
+  width: 125%;
 }
 .fun__download {
   display: grid;
