--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -61,7 +61,7 @@
   color: rgb(136, 46, 250);
   font-weight: 800;
   font-size: 14px;
-  width: calc(100% - 15px);
+  width: 100%;
   opacity: 1;
   padding: 0;
   padding-left: 15px;
