--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -72,7 +72,7 @@
   }
 }
 
-@media only screen and (max-width: 650) {
+@media only screen and (max-width: 650px) {
   .books__heading {
     font-size: 18px;
     font-weight: 400;
@@ -84,5 +84,6 @@
   }
   .books__cont {
     padding: 10px;
+    margin-bottom: 50px;
   }
 }
