--- a/src/components/Fun/Fun.css
+++ b/src/components/Fun/Fun.css
@@ -83,6 +83,7 @@
   -webkit-transition: ease-out 0.3s;
   -moz-transition: ease-out 0.3s;
   transition: ease-out 0.3s;
+  padding-left: 10px;
 }
 .fun__item:hover .fun__item-title {
   background-color: rgb(55, 212, 87, 0.75);
@@ -104,6 +105,7 @@
   font-size: 12px;
   transition: 1s;
   transition-delay: 0.1s;
+  padding-left: 10px;
 }
 .fun__item:hover .fun__item-linkBox {
   bottom: 0;
