--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -5,6 +5,7 @@
   margin: 10px 0;
   max-width: 850px;
   text-align: left;
+  overflow: hidden;
 }
 .book__image {
   max-height: 150px;
@@ -23,6 +24,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 }
 .book__info-cont {
   display: flex;
