--- a/src/components/Match/Match.css
+++ b/src/components/Match/Match.css
@@ -1,40 +1,13 @@
-.grid__card {
-  width: 100px;
-  height: 100px;
-  background-color: lightblue;
-  text-decoration: none;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-radius: 15px;
-  padding: 0;
-  margin: 0;
-  text-align: left;
-  background-image: url("../../images/cardBack.png");
-  overflow: hidden;
-}
-
-.grid__card:hover {
-  border: 2px solid white;
-}
-.grid__flip {
-  background-color: transparent;
+.match {
   width: 100%;
   height: 100%;
-  outline: none;
-  display: relative;
 }
-
-.userBox {
+.match__userBox {
   display: flex;
   flex-direction: column;
-  width: 25%;
-  max-height: 50px;
   margin: 10px auto;
-  max-height: 250px;
   border-radius: 10px;
-  border: 4px solid dodgerblue;
+  border: 4px solid rgba(0, 212, 255, 1);
   overflow: none;
   padding: 10px;
   background-color: white;
@@ -42,141 +15,95 @@
   justify-content: space-between;
   font-size: 12px;
   line-height: 14px;
+  max-height: 800px;
+  background-color: rgba(0, 212, 255, 0.75);
+  width: 75%;
 }
-.gamesWonCont {
+.match__grid {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+.match__game-area {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 80%;
+  height: 100%;
+}
+.match__userInfo {
+  background-color: white;
+  border-radius: 15px;
   color: black;
+  height: 4em;
+  width: 15%;
+  padding: 20px;
 }
-.gamesWon {
-  color: green;
-  padding-left: 4px;
-}
-.gamesLost {
-  color: red;
-}
+
 .resetGame {
-  font-size: 12px;
   line-height: 12px;
-  max-height: 24px;
+  width: 150px;
+  height: 55px;
   background-color: palevioletred;
   color: white;
-}
-.listUL {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  margin: 5px 0;
-}
-.listUL li {
-  padding: 0;
-  margin: 5px;
-  height: 30px;
-  outline: none;
-}
-.grid__card {
-  width: 25px;
-  height: 25px;
-  background-color: lightblue;
-  text-decoration: none;
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  border-radius: 15px;
-  padding: 0;
-  margin: 0;
-  text-align: left;
-  background-image: url("../../images/cardBack.png");
-  overflow: hidden;
+  font-size: 2em;
+  border-radius: 10px;
 }
 
 .grid__card:hover {
   border: 2px solid white;
 }
-.card__rotate {
-  transform: rotateY(180deg);
-}
-.modal {
-  display: none;
+
+.match__card {
   width: 100%;
   height: 100%;
-  position: fixed;
-  top: 0;
-  right: 0;
-}
-.modal__pic {
-  width: 100px;
-  height: 100px;
-  border-radius: 25%;
-}
-.modal__space {
-  width: 300px;
-  height: 300px;
-  background-color: rgb(136, 46, 250);
-  margin: auto;
-  padding: 8px;
-  text-align: left;
-  font-size: 22px;
-  font-weight: bold;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  border-radius: 25px;
+  position: relative;
+  border-radius: 15px;
 }
 
-.modal__link {
-  text-decoration: none;
-  font-size: 12px;
-  color: black;
-  font-weight: normal;
-  margin-top: 15px;
+.match__card .match__card-back {
+  border: 1px solid white;
+  transition: all ease-in 0.2s;
+  transition-delay: 0.2s;
 }
 
-.modal__link {
-  text-decoration: none;
-  font-size: 12px;
-  color: black;
-  min-width: 75px;
-  opacity: 1;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: white;
-  text-align: left;
-  transition: background-color 0.5s ease;
-  z-index: 1;
-  margin: 10px;
-  margin-top: 10px;
+.match__card .match__card-front {
+  border: 3px solid white;
+  transition: all ease-in 0.2s;
+  transform: rotateY(90deg);
+  position: absolute;
 }
-.modal__link:hover {
-  background-color: rgba(0, 212, 255);
+
+.card__rotate .match__card-front {
+  transform: rotateY(0deg);
+  transition-delay: 0.2s;
 }
-.modal__pic {
-  width: 100px;
-  height: 100px;
-  border-radius: 25%;
+.card__rotate .match__card-back {
+  transform: rotateY(90deg);
+  transition-delay: 0.2s;
 }
-.modal__space {
-  width: 300px;
-  height: 300px;
-  background-color: gainsboro;
-  margin: auto;
-  padding: 25px;
-  text-align: left;
-  font-size: 22px;
-  font-weight: bold;
-  margin: 50px auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+.fun__container2 {
+  width: 100%;
 }
-.modal__link {
-  text-decoration: none;
-  font-size: 12px;
-  color: black;
-  font-weight: normal;
-  margin-top: 15px;
+.match__alert-landscape {
+  display: none;
+  color: orangered;
+  font-size: 2rem;
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  border-radius: 15px;
+  padding: 30px;
+  border: 3px solid grey;
+}
+@media only screen and (orientation: portrait) and (max-width: 900px) {
+  .match {
+    display: none;
+  }
+  .match__alert-landscape {
+    display: block;
+  }
 }
