--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -88,44 +88,20 @@
     font-size: 12px;
   }
 }
-@media only screen and (max-width: 658px) {
-  .press {
-  }
-  .press__content {
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
-  }
-  .press__image {
-    width: 450px;
-    height: 450px;
-    border-radius: 25px 25px 0 0;
-  }
-  .press__info {
-    width: 450px;
-    line-height: 22px;
-    padding: 15px;
-    border-radius: 0 0 25px 25px;
-    margin: auto;
-  }
-}
-@media only screen and (max-width: 575px) {
+
+@media only screen and (max-width: 700px) {
   .press__content {
     margin: 0;
-    padding: 0;
     width: 100%;
   }
-  .press__image {
-    width: 90%;
-    max-height: 250px;
-    padding: 0;
-    margin: 0;
-  }
+
   .press__info {
-    width: 90%;
-    line-height: 18px;
-    font-size: 16px;
-    padding: 0;
+    width: 300px;
+    padding: 10px;
     margin: 0;
+    padding-left: 10px;
+  }
+  .press__info-text {
+    display: none;
   }
 }
