Made primary block component to simplify

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,4 @@
 @import url("./components/Popup/Popup.css");
 @import url("./components/Navigation/Navigation.css");
 @import url("./components/MobileNavigation/MobileNavigation.css");
+@import url("./components/Block/Block.css");
