--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -7,9 +7,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: black;
-  min-height: 300px;
   position: relative;
-  height: 90vh;
+  max-height: 90vh;
 }
 .about__content {
   width: 75%;
@@ -118,5 +117,10 @@
     bottom: 40px;
     border-right: 25px solid white;
     border-bottom: 15px solid transparent;
+  }
+}
+@media only screen and (orientation: portrait) and (max-width: 650px) {
+  .about {
+    max-height: 50vh;
   }
 }
