--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -1,89 +1,8 @@
-.books__cont {
-  margin: 0 auto;
-  position: relative;
-  padding: 50px 0;
-}
-.books__inner-cont {
+.books__container-inner {
   width: 80%;
   display: grid;
   grid-template-columns: repeat(2, minmax(200px, 1fr));
   grid-gap: 10px;
   margin: 0 auto;
-  margin-top: 25px;
-}
-.books__bg {
-  transform: rotate(3deg);
-  z-index: -1;
-  position: absolute;
-  left: -50px;
-  top: 0;
-  background-color: rgba(0, 212, 255, 1);
-  height: 110%;
-  width: 125%;
-}
-.books__heading {
-  width: 80%;
-  margin: 0 auto;
-  font-size: 36px;
-  color: rgba(0, 212, 255, 1);
-  font-weight: 800;
-  text-align: left;
-  padding-top: 20px;
-  margin-top: 100px;
-}
-.books__subheading {
-  width: 80%;
-  margin: 0 auto 5em auto;
-  font-size: 24px;
-  color: rgba(0, 0, 0, 0.5);
-  font-weight: 400;
-  text-align: left;
-  padding-top: 5px;
-}
-
-@media only screen and (max-width: 1200px) {
-  .books__inner-cont {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-  }
-  .books__heading {
-    font-size: 32px;
-    padding-top: 10px;
-  }
-  .books__subheading {
-    margin: 0 auto 55px auto;
-    font-size: 20px;
-  }
-  .books__cont {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-  }
-}
-@media only screen and (max-width: 900px) {
-  .books__heading {
-    font-size: 24px;
-
-    padding-top: 10px;
-  }
-  .books__subheading {
-    font-size: 14px;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .books__heading {
-    font-size: 18px;
-    font-weight: 400;
-    padding-top: 10px;
-  }
-  .books__subheading {
-    margin: 0 auto 15px auto;
-    font-size: 12px;
-  }
-  .books__cont {
-    padding: 10px;
-    margin-bottom: 50px;
-  }
+  position: relative;
 }
