--- a/src/components/Press/Press.css
+++ b/src/components/Press/Press.css
@@ -1,7 +1,8 @@
 .press {
   padding: 50px;
   background-color: grey;
-  margin: 50px 0;
+  margin: 0;
+  margin-top: 10em;
   display: flex;
   flex-direction: column;
   align-items: center;
