--- a/src/components/Fun/Fun.css
+++ b/src/components/Fun/Fun.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(3, minmax(200px, 2fr));
   grid-gap: 10px;
   margin: 0 auto;
+  width: 50%;
 }
 .fun__match {
   width: 80%;
